--- a/Source/SCIT1thProject/src/View/HouseHold.fxml
+++ b/Source/SCIT1thProject/src/View/HouseHold.fxml
@@ -49,8 +49,8 @@
             <Button fx:id="fix" layoutX="14.0" layoutY="496.0" mnemonicParsing="false" onAction="#btnCorrectTView" prefHeight="23.0" prefWidth="274.0" text="수정" />
             <Label layoutX="15.0" layoutY="532.0" text="소비 금액" />
             <Label layoutX="15.0" layoutY="570.0" text="총 재산" />
-            <TextField fx:id="showSpend" layoutX="74.0" layoutY="530.0" />
-            <TextField fx:id="showTotalmoney" layoutX="74.0" layoutY="566.0" />
+            <TextField fx:id="showSpend" editable="false" layoutX="74.0" layoutY="530.0" />
+            <TextField fx:id="showTotalmoney" editable="false" layoutX="74.0" layoutY="566.0" />
             <Label layoutX="225.0" layoutY="534.0" text="원" />
             <Label layoutX="225.0" layoutY="569.0" text="원" />
             <ComboBox fx:id="searchCombo" layoutX="18.0" layoutY="66.0" prefHeight="33.0" prefWidth="268.0" />
