--- a/Source/SCIT1thProject/src/View/InsertDaySchedule.fxml
+++ b/Source/SCIT1thProject/src/View/InsertDaySchedule.fxml
@@ -7,39 +7,32 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="336.0" prefWidth="364.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141">
+<AnchorPane prefHeight="327.0" prefWidth="342.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.InsertDayScheduleController">
    <children>
-      <Spinner fx:id="hous" layoutX="36.0" layoutY="26.0" prefHeight="23.0" prefWidth="61.0" />
-      <Button fx:id="insert" layoutX="71.0" layoutY="269.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="109.0" text="추가">
+      <Spinner fx:id="hour" layoutX="77.0" layoutY="26.0" prefHeight="23.0" prefWidth="61.0" />
+      <Button fx:id="insert" layoutX="52.0" layoutY="271.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="109.0" text="추가">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <TextArea fx:id="content" layoutX="70.0" layoutY="68.0" prefHeight="184.0" prefWidth="244.0" />
-      <Label layoutX="104.0" layoutY="28.0" text="시">
+      <TextArea fx:id="content" layoutX="69.0" layoutY="72.0" prefHeight="184.0" prefWidth="227.0" />
+      <Label layoutX="145.0" layoutY="28.0" text="시">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="201.0" layoutY="28.0" text="분">
+      <Label layoutX="266.0" layoutY="28.0" text="분">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="300.0" layoutY="28.0" text="초">
+      <Spinner fx:id="minute" layoutX="198.0" layoutY="26.0" prefHeight="23.0" prefWidth="61.0" />
+      <Label layoutX="21.0" layoutY="68.0" text="내용">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Spinner fx:id="minute" layoutX="131.0" layoutY="26.0" prefHeight="23.0" prefWidth="61.0" />
-      <Spinner fx:id="second" layoutX="231.0" layoutY="26.0" prefHeight="23.0" prefWidth="61.0" />
-      <Label layoutX="36.0" layoutY="68.0" text="내용">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Button fx:id="cancel" layoutX="201.0" layoutY="269.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="109.0" text="취소">
+      <Button fx:id="cancel" layoutX="182.0" layoutY="271.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="109.0" text="취소">
          <font>
             <Font size="13.0" />
          </font>
