--- a/Source/SCIT1thProject/src/View/HouseHold.fxml
+++ b/Source/SCIT1thProject/src/View/HouseHold.fxml
@@ -62,13 +62,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="프로그램">
             <items>
-                  <MenuItem mnemonicParsing="false" text="로그아웃" />
-              <MenuItem mnemonicParsing="false" text="프로그램 종료" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="도움말">
-            <items>
-              <MenuItem mnemonicParsing="false" text="프로그램 도움말" />
+              <MenuItem mnemonicParsing="false" onAction="#exitProgram" text="프로그램 종료" />
             </items>
           </Menu>
         </menus>
