--- a/Source/SCIT1thProject/src/View/Calendar.fxml
+++ b/Source/SCIT1thProject/src/View/Calendar.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,13 +8,14 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
+<AnchorPane fx:id="calendarPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.CalendarController">
    <children>
       <GridPane fx:id="gridPane" gridLinesVisible="true" layoutY="25.0" prefHeight="625.0" prefWidth="875.0" style="-fx-background-color: white; -fx-border-color: black;">
         <columnConstraints>
@@ -80,6 +75,16 @@
                      </font>
                   </Label>
                   <TextArea fx:id="textArea1" editable="false" layoutY="30.0" prefHeight="66.0" prefWidth="124.0" />
+                  <Label fx:id="min1" layoutX="70.0" layoutY="6.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max1" layoutX="95.0" layoutY="6.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -91,6 +96,36 @@
                   </Label>
                   <TextArea fx:id="textArea2" editable="false" layoutX="1.0" layoutY="31.0" prefHeight="66.0" prefWidth="124.0" style="-fx-background-insets: 0; -fx-padding: 0;" />
                   <ImageView fx:id="weather2" fitHeight="30.0" fitWidth="30.0" layoutX="30.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="min11" layoutX="66.0" layoutY="3.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max11" layoutX="91.0" layoutY="3.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="min12" layoutX="80.0" layoutY="16.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max12" layoutX="105.0" layoutY="16.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="min121" layoutX="90.0" layoutY="26.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max121" layoutX="115.0" layoutY="26.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -102,6 +137,16 @@
                   </Label>
                   <TextArea fx:id="textArea3" editable="false" layoutY="30.0" prefHeight="66.0" prefWidth="124.0" style="-fx-background-insets: 0; -fx-padding: 0;" />
                   <ImageView fx:id="weather3" fitHeight="30.0" fitWidth="30.0" layoutX="30.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="min111" layoutX="64.0" layoutY="4.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max111" layoutX="89.0" layoutY="4.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
@@ -113,6 +158,16 @@
                   </Label>
                   <TextArea fx:id="textArea4" editable="false" layoutY="30.0" prefHeight="66.0" prefWidth="124.0" style="-fx-background-insets: 0; -fx-padding: 0;" />
                   <ImageView fx:id="weather4" fitHeight="30.0" fitWidth="30.0" layoutX="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="min112" layoutX="62.0" layoutY="6.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max112" layoutX="87.0" layoutY="6.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
@@ -124,6 +179,16 @@
                   </Label>
                   <TextArea fx:id="textArea5" editable="false" layoutY="30.0" prefHeight="66.0" prefWidth="124.0" style="-fx-background-insets: 0; -fx-padding: 0;" />
                   <ImageView fx:id="weather5" fitHeight="30.0" fitWidth="30.0" layoutX="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="min113" layoutX="61.0" layoutY="6.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max113" layoutX="86.0" layoutY="6.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="1">
@@ -135,6 +200,16 @@
                   </Label>
                   <TextArea fx:id="textArea6" editable="false" layoutY="30.0" prefHeight="66.0" prefWidth="124.0" style="-fx-background-insets: 0; -fx-padding: 0;" />
                   <ImageView fx:id="weather6" fitHeight="30.0" fitWidth="30.0" layoutX="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="min114" layoutX="61.0" layoutY="12.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max114" layoutX="86.0" layoutY="12.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="1">
@@ -146,6 +221,16 @@
                   </Label>
                   <TextArea fx:id="textArea7" editable="false" layoutY="30.0" prefHeight="66.0" prefWidth="124.0" style="-fx-background-insets: 0; -fx-padding: 0;" />
                   <ImageView fx:id="weather7" fitHeight="30.0" fitWidth="30.0" layoutX="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="min115" layoutX="63.0" layoutY="10.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="max115" layoutX="88.0" layoutY="10.0" prefHeight="20.0" prefWidth="20.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -354,7 +439,7 @@
                      </font>
                   </Label>
                   <TextArea fx:id="textArea32" editable="false" layoutY="30.0" prefHeight="66.0" prefWidth="124.0" style="-fx-background-insets: 0; -fx-padding: 0;" />
-                  <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="weather32" fitHeight="30.0" fitWidth="30.0" layoutX="30.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="3">
