--- a/Source/SCIT1thProject/src/View/HouseHold.fxml
+++ b/Source/SCIT1thProject/src/View/HouseHold.fxml
@@ -23,7 +23,7 @@
       <DatePicker fx:id="endDay" layoutX="730.0" layoutY="67.0" prefHeight="30.0" prefWidth="170.0" />
       <AnchorPane layoutX="900.0" prefHeight="680.0" prefWidth="300.0">
          <children>
-            <Button fx:id="add" layoutX="15.0" layoutY="426.0" mnemonicParsing="false" onAction="#btnAddTView" prefHeight="23.0" prefWidth="274.0" text="추가" />
+            <Button fx:id="add" layoutX="15.0" layoutY="426.0" mnemonicParsing="false" onAction="#btnAddTView" prefHeight="23.0" prefWidth="274.0" text="지출" />
             <GridPane layoutX="13.0" layoutY="124.0" prefHeight="294.0" prefWidth="274.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -45,15 +45,19 @@
                   <TextArea fx:id="content" prefHeight="137.0" prefWidth="129.0" GridPane.rowIndex="5" />
                </children>
             </GridPane>
-            <Button fx:id="delete" layoutX="15.0" layoutY="462.0" mnemonicParsing="false" onAction="#btnDeleteTView" prefHeight="23.0" prefWidth="274.0" text="삭제" />
-            <Button fx:id="fix" layoutX="14.0" layoutY="496.0" mnemonicParsing="false" onAction="#btnCorrectTView" prefHeight="23.0" prefWidth="274.0" text="수정" />
-            <Label layoutX="15.0" layoutY="532.0" text="소비 금액" />
-            <Label layoutX="15.0" layoutY="570.0" text="총 재산" />
-            <TextField fx:id="showSpend" editable="false" layoutX="74.0" layoutY="530.0" />
-            <TextField fx:id="showTotalmoney" editable="false" layoutX="74.0" layoutY="566.0" />
-            <Label layoutX="225.0" layoutY="534.0" text="원" />
-            <Label layoutX="225.0" layoutY="569.0" text="원" />
+            <Button fx:id="delete" layoutX="15.0" layoutY="490.0" mnemonicParsing="false" onAction="#btnDeleteTView" prefHeight="23.0" prefWidth="274.0" text="삭제" />
+            <Button fx:id="fix" layoutX="14.0" layoutY="524.0" mnemonicParsing="false" onAction="#btnCorrectTView" prefHeight="23.0" prefWidth="274.0" text="수정" />
+            <Label layoutX="15.0" layoutY="557.0" text="지출 금액" />
+            <Label layoutX="15.0" layoutY="619.0" text="총 재산" />
+            <TextField fx:id="showSpend" editable="false" layoutX="74.0" layoutY="555.0" />
+            <TextField fx:id="showTotalmoney" editable="false" layoutX="74.0" layoutY="615.0" />
+            <Label layoutX="225.0" layoutY="559.0" text="원" />
+            <Label layoutX="225.0" layoutY="618.0" text="원" />
             <ComboBox fx:id="searchCombo" layoutX="18.0" layoutY="66.0" onAction="#searchComboClick" prefHeight="33.0" prefWidth="268.0" />
+            <Button fx:id="add1" layoutX="15.0" layoutY="458.0" mnemonicParsing="false" onAction="#btnAddTView2" prefHeight="23.0" prefWidth="274.0" text="수입" />
+            <Label layoutX="225.0" layoutY="589.0" text="원" />
+            <TextField fx:id="showSpend2" editable="false" layoutX="74.0" layoutY="585.0" />
+            <Label layoutX="15.0" layoutY="587.0" text="수입 금액" />
          </children>
       </AnchorPane>
       <Label layoutX="707.0" layoutY="75.0" text="~" />
