이로이로나수정
ㅇㅇㅇ

--- a/Source/SCIT1thProject/bin/View/Home.fxml
+++ b/Source/SCIT1thProject/bin/View/Home.fxml
@@ -17,7 +17,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="도움말">
             <items>
-              <MenuItem mnemonicParsing="false" text="프로그램 도움말" />
+              <MenuItem mnemonicParsing="false" onAction="#openHelp" text="about" />
             </items>
           </Menu>
         </menus>
