--- a/Source/SCIT1thProject/src/View/FindAddress2.fxml
+++ b/Source/SCIT1thProject/src/View/FindAddress2.fxml
@@ -22,19 +22,14 @@
                <children>
                   <MenuBar layoutX="-1.0" prefHeight="25.0" prefWidth="600.0">
                     <menus>
-                      <Menu mnemonicParsing="false" text="File">
+                      <Menu mnemonicParsing="false" text="프로그램">
                         <items>
-                          <MenuItem mnemonicParsing="false" text="Close" />
+                          <MenuItem mnemonicParsing="false" onAction="#exitProgram" text="프로그램 종료" />
                         </items>
                       </Menu>
-                      <Menu mnemonicParsing="false" text="Edit">
+                      <Menu mnemonicParsing="false" text="도움말">
                         <items>
-                          <MenuItem mnemonicParsing="false" text="Delete" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Help">
-                        <items>
-                          <MenuItem mnemonicParsing="false" text="About" />
+                          <MenuItem mnemonicParsing="false" onAction="#openHelp" text="프로그램 도움말" />
                         </items>
                       </Menu>
                     </menus>
@@ -43,7 +38,7 @@
                   <Label layoutX="14.0" layoutY="43.0" prefHeight="15.0" prefWidth="64.0" text="현주소" />
                   <Button fx:id="Chk_address_btn" layoutX="469.0" layoutY="39.0" mnemonicParsing="false" onAction="#Click_find_add" prefHeight="23.0" prefWidth="96.0" text="주소검색" />
                   <Button fx:id="Input_add_btn" layoutX="469.0" layoutY="73.0" mnemonicParsing="false" onAction="#addressInput" prefHeight="23.0" prefWidth="96.0" text="주소입력" />
-                  <Label fx:id="resultLabel" layoutX="87.0" layoutY="73.0" prefHeight="23.0" prefWidth="371.0" />
+                  <Label fx:id="resultLabel" layoutX="87.0" layoutY="65.0" prefHeight="23.0" prefWidth="371.0" text="- 시/ 군/구/동/읍/면/리 단위로 검색 해주세요." />
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="461.0" prefWidth="398.0">
                <children>
