--- a/Source/SCIT1thProject/src/View/HouseHold.fxml
+++ b/Source/SCIT1thProject/src/View/HouseHold.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -15,13 +18,21 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="HouseHoldPane" prefHeight="679.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HouseHoldController">
+<AnchorPane fx:id="HouseHoldPane" prefHeight="679.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.HouseHoldController">
    <children>
       <DatePicker fx:id="stardDay" layoutX="528.0" layoutY="67.0" prefHeight="30.0" prefWidth="170.0" />
       <DatePicker fx:id="endDay" layoutX="730.0" layoutY="67.0" prefHeight="30.0" prefWidth="170.0" />
       <AnchorPane layoutX="900.0" prefHeight="680.0" prefWidth="300.0">
          <children>
+            <ComboBox fx:id="searchCombo" layoutX="18.0" layoutY="66.0" onAction="#searchComboClick" prefHeight="33.0" prefWidth="268.0" />
+            <DatePicker fx:id="chooseDate" layoutX="50.0" layoutY="108.0" prefHeight="23.0" prefWidth="235.0" promptText="날짜를 선택해 주세요" />
             <Button fx:id="add" layoutX="15.0" layoutY="445.0" mnemonicParsing="false" onAction="#btnAddTView" prefHeight="23.0" prefWidth="274.0" text="지출" />
+            <Button fx:id="add1" layoutX="15.0" layoutY="477.0" mnemonicParsing="false" onAction="#btnAddTView2" prefHeight="23.0" prefWidth="274.0" text="수입" />
+            <Button fx:id="delete" layoutX="15.0" layoutY="509.0" mnemonicParsing="false" onAction="#btnDeleteTView" prefHeight="23.0" prefWidth="274.0" text="삭제" />
+            <Button fx:id="fix" layoutX="14.0" layoutY="543.0" mnemonicParsing="false" onAction="#btnCorrectTView" prefHeight="23.0" prefWidth="274.0" text="수정" />
+            <TextField fx:id="showSpend" editable="false" layoutX="74.0" layoutY="574.0" />
+            <TextField fx:id="showSpend2" editable="false" layoutX="74.0" layoutY="604.0" />
+            <TextField fx:id="showTotalmoney" editable="false" layoutX="74.0" layoutY="634.0" />
             <GridPane layoutX="13.0" layoutY="137.0" prefHeight="294.0" prefWidth="274.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -43,21 +54,13 @@
                   <TextArea fx:id="content" prefHeight="137.0" prefWidth="129.0" GridPane.rowIndex="5" />
                </children>
             </GridPane>
-            <Button fx:id="delete" layoutX="15.0" layoutY="509.0" mnemonicParsing="false" onAction="#btnDeleteTView" prefHeight="23.0" prefWidth="274.0" text="삭제" />
-            <Button fx:id="fix" layoutX="14.0" layoutY="543.0" mnemonicParsing="false" onAction="#btnCorrectTView" prefHeight="23.0" prefWidth="274.0" text="수정" />
             <Label layoutX="15.0" layoutY="576.0" text="지출 금액" />
+            <Label layoutX="15.0" layoutY="606.0" text="수입 금액" />
             <Label layoutX="15.0" layoutY="638.0" text="총 재산" />
-            <TextField fx:id="showSpend" editable="false" layoutX="74.0" layoutY="574.0" />
-            <TextField fx:id="showTotalmoney" editable="false" layoutX="74.0" layoutY="634.0" />
+            <Label layoutX="13.0" layoutY="110.0" text="날짜" />
             <Label layoutX="225.0" layoutY="578.0" text="원" />
             <Label layoutX="225.0" layoutY="637.0" text="원" />
-            <ComboBox fx:id="searchCombo" layoutX="18.0" layoutY="66.0" onAction="#searchComboClick" prefHeight="33.0" prefWidth="268.0" />
-            <Button fx:id="add1" layoutX="15.0" layoutY="477.0" mnemonicParsing="false" onAction="#btnAddTView2" prefHeight="23.0" prefWidth="274.0" text="수입" />
             <Label layoutX="225.0" layoutY="607.0" text="원" />
-            <TextField fx:id="showSpend2" editable="false" layoutX="74.0" layoutY="604.0" />
-            <Label layoutX="15.0" layoutY="606.0" text="수입 금액" />
-            <DatePicker fx:id="chooseDate" layoutX="50.0" layoutY="108.0" prefHeight="23.0" prefWidth="235.0" promptText="날짜를 선택해 주세요" />
-            <Label layoutX="13.0" layoutY="110.0" text="날짜" />
          </children>
       </AnchorPane>
       <Label layoutX="707.0" layoutY="75.0" text="~" />
