--- a/Source/SCIT1thProject/src/View/InsertSchedule.fxml
+++ b/Source/SCIT1thProject/src/View/InsertSchedule.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -7,11 +11,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="366.0" prefWidth="361.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="View.Controller.InsertScheduleController">
+<AnchorPane prefHeight="366.0" prefWidth="361.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Controller.InsertScheduleController">
    <children>
-      <DatePicker fx:id="to" layoutX="43.0" layoutY="84.0" />
-      <DatePicker fx:id="from" layoutX="43.0" layoutY="45.0" />
+      <DatePicker fx:id="to" editable="false" layoutX="43.0" layoutY="84.0" />
+      <DatePicker fx:id="from" editable="false" layoutX="43.0" layoutY="45.0" />
       <Label layoutX="233.0" layoutY="47.0" text="부터">
          <font>
             <Font size="15.0" />
